# reachy_moveit_config_ros2

./: CMakeLists.txt  README.md  package.xml
config/: kinematics.yaml  ompl_planning.yaml  reachy.srdf  reachy.srdf.xacro  reachy_controllers.yaml  reachy_ros_controllers.yaml
launch/: demo.launch.py  moveit.rviz  moveit_empty.rviz
