<?xml version="1.0"?>
<package format="3">
  <name>reachy_moveit_config_ros2</name>
  <version>2.0.2</version>
  <description>
    <p>
      MoveIt2 Resources for  Reachy
    </p>
    <p>
      Configuration for controlling Reachy with MoveIt2.
    </p>
  </description>
  <author email="steve.nguyen@pollen-robotics.com">Steve Nguyen</author>
  <maintainer email="steve.nguyen@pollen-robotics.com">Steve Nguyen</maintainer>

  <license>Apache</license>
  <url type="website">http://pollen-robotics.com</url>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>reachy_description_ros2</exec_depend>
  <!-- disabled to remove circular dependencies
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- TODO(#40): Package not available in ROS 2, find equivalent when migrating launch files
  <exec_depend>topic_tools</exec_depend>
  -->
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment.
       Commented the dependency until this works. -->
  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
